# Ventra-Messenger-Desktop-Client

./: .gitignore  README.md
QTClient/: CMakeLists.txt  res.qrc
QTClient/src/: main.cpp
QTClient/src/Database/: LocalDatabase.cpp  LocalDatabase.h
QTClient/src/Gui/: Gui_Structs_Enums.h
QTClient/src/Gui/ChatWindow/: ChatInputBar.cpp  ChatInputBar.h  ChatWindow.cpp  ChatWindow.h  Message.cpp  Message.h  MessageTextWidget.cpp  MessageTextWidget.h
QTClient/src/Gui/ContactList/: ContactButton.cpp  ContactButton.h  ContactList.cpp  ContactList.h  ContactListSearch.cpp  ContactListSearch.h
QTClient/src/Gui/DirektChatScreen/: DirektChatScreen.cpp  DirektChatScreen.h
QTClient/src/Gui/GuiHelper/: GuiHelper.cpp  GuiHelper.h
QTClient/src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h
QTClient/src/Gui/Sidebar/: Sidebar.cpp  Sidebar.h
QTClient/src/HelperUtils/: HelperUtils.cpp  HelperUtils.h
QTClient/src/Logic/DataBaseOperations/: DMChatDBManager.cpp  DMChatDBManager.h  UserDataDB.cpp  UserDataDB.h
QTClient/src/Logic/GuiUpdates/: DMChatGuiManager.cpp  DMChatGuiManager.h
QTClient/src/Logic/ScreenManager/: DMChatManager.cpp  DMChatManager.h
QTClient/src/ThreadPool/: ThreadPool.cpp  ThreadPool.h  ThreadPool.tpp  ThreadSaveVector.cpp  ThreadSaveVector.h
QTClient/test/: WebSocketWorker.h
QTClient/themes/: style.qss
Shared/Converter/: HexConverter.cpp  HexConverter.h
Shared/Crypto/DoubleRatchet/: DoubleRatchet.cpp  DoubleRatchet.h
Shared/Crypto/Encryption/: AES256.cpp  AES256.h  ChaCha20.cpp  ChaCha20.h  EncryptionEnv.cpp  EncryptionEnv.h
Shared/Crypto/Hash/: BLAKE2b512.cpp  BLAKE2b512.h  BLAKE2s256.cpp  BLAKE2s256.h  HashingEnv.cpp  HashingEnv.h
Shared/Crypto/IDs/: GenerateID.cpp  GenerateID.h
Shared/Crypto/KDF/: HKDF.cpp  HKDF.h  KDFEnv.cpp  KDFEnv.h
Shared/Crypto/KeyEnv/: KeyEnv.cpp  KeyEnv.h  RandomVec.cpp  RandomVec.h  X25519KeyPair.cpp  X25519KeyPair.h
Shared/Network/: Packages.cpp  Packages.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h
